--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <div class="footer-grid">
             <div class="footer-info">
                 <a href="#" class="logo">YKONE</a>
-                <p>Bureau de Tunis : Les Berges du Lac II, Immeuble Prestige, 1053 Tunis, Tunisie.</p>
+                <p>Bureau de Tunis :  Rue du Lac d'Annecy, 1053 Tunis, Tunisie.</p>
             </div>
             <div class="footer-socials">
                 <p class="tagline">Follow us</p>
